--- a/theattend-front-end/bower.json
+++ b/theattend-front-end/bower.json
@@ -1,25 +1,17 @@
 {
-  "name": "polymer-starter-kit",
-  "authors": [
-    "The Polymer Authors"
-  ],
-  "license": "https://polymer.github.io/LICENSE.txt",
+  "name": "theattend",
+  "description": "The Attend Application: Make sure your friends will attend.",
+  "main": "index.html",
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#2.0-preview",
-    "app-route": "PolymerElements/app-route#2.0-preview",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
-    "iron-icon": "PolymerElements/iron-icon#2.0-preview",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
-    "iron-localstorage": "PolymerElements/iron-localstorage#2.0-preview",
-    "iron-media-query": "PolymerElements/iron-media-query#2.0-preview",
-    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "iron-selector": "PolymerElements/iron-selector#2.0-preview",
-    "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
-    "polymer": "Polymer/polymer#2.0-preview",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.1"
+    "polymer": "Polymer/polymer#^2.0.0-rc.2"
   },
   "devDependencies": {
-    "web-component-tester": "6.0.0-prerelease.5"
+    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
+    "web-component-tester": "v6.0.0-prerelease.5",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#1.0.0-rc.5"
   },
-  "private": true
+  "resolutions": {
+    "polymer": "^2.0.0-rc.2"
+  }
 }
